# organiza

./: .gitignore  README.md  README.pt-BR.md  index.html  package-lock.json  package.json
scripts/: testar-parser.ts
src/: App.tsx  main.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/components/: ContaForm.tsx  EventoForm.tsx  LembreteForm.tsx  MembroBadge.tsx  Modal.tsx
src/lib/: backup.ts  consultas.ts  csv.ts  db.ts  eventos.ts  format.ts  icons.tsx  parser.ts  power.ts  reminders.ts  telegram.ts  types.ts
src/pages/: Calendario.tsx  Cartoes.tsx  Configuracoes.tsx  Contas.tsx  Dashboard.tsx  FluxoCaixa.tsx  Lembretes.tsx  Relatorios.tsx
